---
source: tests/tests/typescript.rs
expression: "dts.iter().filter_map(|(s, ty)| match ty\n{\n    DataType::Reference(Reference::Named(r)) =>\n    r.get(&types).cloned().map(|ty| (s, ty)), _ => None,\n}).map(|(s, ty)|\nprimitives::export(&ts, &types, iter::once(&ty),\n\"\").map(|ty| format!(\"{s}: {ty}\"))).collect::<Result<Vec<_>,\n_>>().unwrap().join(\"\\n\")"
---
Range<i32>: export type Range<T> = {
	start: T,
	end: T,
};

RangeInclusive<i32>: export type RangeInclusive<T> = {
	start: T,
	end: T,
};

String: export type String = string;

PathBuf: export type PathBuf = string;

IpAddr: export type IpAddr = string;

Ipv4Addr: export type Ipv4Addr = string;

Ipv6Addr: export type Ipv6Addr = string;

SocketAddr: export type SocketAddr = string;

SocketAddrV4: export type SocketAddrV4 = string;

SocketAddrV6: export type SocketAddrV6 = string;

Cow<'static, str>: export type Cow<T> = T;

Cow<'static, i32>: export type Cow<T> = T;

SystemTime: export type SystemTime = {
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
};

Duration: export type Duration = {
	secs: number,
	nanos: number,
};

Vec<i32>: export type Vec<T> = T[];

Vec<MyEnum>: export type Vec<T> = T[];

Result<String, i32>: export type Result<T, E> = ({ Ok: T }) & { Err?: never } | ({ Err: E }) & { Ok?: never };

Vec<Option<Cow<'static, i32>>>: export type Vec<T> = T[];

PhantomData<()>: export type PhantomData<T> = null;

PhantomData<String>: export type PhantomData<T> = null;

Infallible: export type Infallible = never;

Unit1: export type Unit1 = null;

Unit2: export type Unit2 = Record<string, never>;

Unit3: export type Unit3 = [];

Unit4: export type Unit4 = null;

Unit5: export type Unit5 = "A";

Unit6: export type Unit6 = { A: [] };

Unit7: export type Unit7 = { A: Record<string, never> };

SimpleStruct: export type SimpleStruct = {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
};

TupleStruct1: export type TupleStruct1 = number;

TupleStruct3: export type TupleStruct3 = [number, boolean, string];

TestEnum: export type TestEnum = "Unit" | ({ Single: number }) & { Multiple?: never; Struct?: never } | ({ Multiple: [number, number] }) & { Single?: never; Struct?: never } | ({ Struct: { a: number } }) & { Multiple?: never; Single?: never };

RefStruct: export type RefStruct = TestEnum;

InlinerStruct: export type InlinerStruct = {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
};

GenericStruct<i32>: export type GenericStruct<T> = {
	arg: T,
};

GenericStruct<String>: export type GenericStruct<T> = {
	arg: T,
};

FlattenEnumStruct: export type FlattenEnumStruct = (FlattenEnum) & {
	outer: string,
};

OverridenStruct: export type OverridenStruct = {
	overriden_field: string,
};

HasGenericAlias: export type HasGenericAlias = { [key in number]: string };

EnumMacroAttributes: export type EnumMacroAttributes = ({ A: string }) & { B?: never; C?: never; D?: never } | ({ B: number }) & { A?: never; C?: never; D?: never } | ({ C: number }) & { A?: never; B?: never; D?: never } | ({ D: { a: string; b: number } }) & { A?: never; B?: never; C?: never };

InlineEnumField: export type InlineEnumField = { A: {
	a: string,
} };

InlineOptionalType: export type InlineOptionalType = {
	optional_field: {
		a: string,
	} | null,
};

Rename: export type Rename = "OneWord" | "TwoWords";

TransparentType: export type TransparentType = TransparentTypeInner;

TransparentType2: export type TransparentType2 = null;

TransparentTypeWithOverride: export type TransparentTypeWithOverride = string;

HashMap<BasicEnum, ()>: export type HashMap<K, V> = { [key in K]: V };

Vec<PlaceholderInnerField>: export type Vec<T> = T[];

HashMap<BasicEnum, i32>: export type HashMap<K, V> = { [key in K]: V };

EnumReferenceRecordKey: export type EnumReferenceRecordKey = {
	a: Partial<{ [key in BasicEnum]: number }>,
};

FlattenOnNestedEnum: export type FlattenOnNestedEnum = (NestedEnum) & {
	id: string,
};

MyEmptyInput: export type MyEmptyInput = Record<string, never>;

(String): export type String = string;

ExtraBracketsInTupleVariant: export type ExtraBracketsInTupleVariant = { A: string };

ExtraBracketsInUnnamedStruct: export type ExtraBracketsInUnnamedStruct = string;

Vec<MyEnum>: export type Vec<T> = T[];

InlineTuple: export type InlineTuple = {
	demo: [string, boolean],
};

InlineTuple2: export type InlineTuple2 = {
	demo: [{
		demo: [string, boolean],
	}, boolean],
};

Box<str>: export type Box<T> = T;

Box<String>: export type Box<T> = T;

SkippedFieldWithinVariant: export type SkippedFieldWithinVariant = { type: "A" } | { type: "B"; data: string };

KebabCase: export type KebabCase = {
	test_ing: string,
};

Issue281<'_>: export type Issue281 = {
	default_unity_arguments: string[],
};

LifetimeGenericStruct<'_, i32>: export type LifetimeGenericStruct<T> = {
	borrowed: T[],
	owned: T[],
};

LifetimeGenericEnum<'_, i32>: export type LifetimeGenericEnum<T> = ({ Borrowed: T }) & { Owned?: never } | ({ Owned: T }) & { Borrowed?: never };

RenameWithWeirdCharsField: export type RenameWithWeirdCharsField = {
	odata_context: string,
};

RenameWithWeirdCharsVariant: export type RenameWithWeirdCharsVariant = { A: string };

RenamedFieldKeys: export type RenamedFieldKeys = {
	empty: string,
	quote: string,
	backslash: string,
	newline: string,
	line_separator: string,
	paragraph_separator: string,
};

RenamedVariantWithSkippedPayload: export type RenamedVariantWithSkippedPayload = "A";

Issue374: // https://github.com/specta-rs/specta/issues/374
export type Issue374 = {
	foo: boolean,
	bar: boolean,
};

type_type::Type: export type Type = never;

ActualType: export type ActualType = {
	a: GenericType<string>,
};

SpectaTypeOverride: export type SpectaTypeOverride = {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
};

ContainerTypeOverrideStruct: export type ContainerTypeOverrideStruct = string;

ContainerTypeOverrideEnum: export type ContainerTypeOverrideEnum = string;

ContainerTypeOverrideGeneric<Box<dyn Any>>: export type ContainerTypeOverrideGeneric = string;

ContainerTypeOverrideToGeneric<i32>: export type ContainerTypeOverrideToGeneric<T> = T;

ContainerTypeOverrideTuple: export type ContainerTypeOverrideTuple = [string, number];

ContainerTypeOverrideTupleGeneric<i32>: export type ContainerTypeOverrideTupleGeneric<T> = [T, string];

InvalidToValidType: export type InvalidToValidType = {
	cause: null,
};

TupleStruct: export type TupleStruct = string;

TupleStructWithRep: export type TupleStructWithRep = string;

GenericTupleStruct<String>: export type GenericTupleStruct<T> = T;

BracedStruct: export type BracedStruct = string;

StructRenameAllUppercase: export type StructRenameAllUppercase = {
	a: number,
	b: number,
};

RenameSerdeSpecialChar: export type RenameSerdeSpecialChar = {
	b: number,
};

EnumRenameAllUppercase: export type EnumRenameAllUppercase = "HelloWorld" | "VariantB" | "TestingWords";

Recursive: export type Recursive = {
	demo: Recursive,
};

RecursiveMapValue: export type RecursiveMapValue = {
	demo: { [key in string]: RecursiveMapValue },
};

RecursiveTransparent: export type RecursiveTransparent = RecursiveInline;

RecursiveInEnum: export type RecursiveInEnum = { A: (RecursiveInEnum) };

NonOptional: export type NonOptional = string | null;

OptionalOnNamedField: export type OptionalOnNamedField = string | null;

OptionalOnTransparentNamedField: export type OptionalOnTransparentNamedField = {
	b: string | null,
};

OptionalInEnum: export type OptionalInEnum = ({ A: string | null }) & { B?: never; C?: never } | ({ B: { a: string | null } }) & { A?: never; C?: never } | ({ C: { a?: string | null } }) & { A?: never; B?: never };

Optional: export type Optional = {
	a: number | null,
	b?: number | null,
	c: string | null,
	d: boolean,
};

UntaggedVariants: export type UntaggedVariants = string | number | { id: string } | [string, boolean];

UntaggedVariantsWithoutValue: export type UntaggedVariantsWithoutValue = string | [number, string] | number;

UntaggedVariantsWithDuplicateBranches: export type UntaggedVariantsWithDuplicateBranches = null | number;

HashMap<String, ()>: export type HashMap<K, V> = { [key in K]: V };

Regular: export type Regular = { [key in string]: null };

HashMap<Infallible, ()>: export type HashMap<K, V> = { [key in K]: V };

HashMap<UnitVariants, ()>: export type HashMap<K, V> = { [key in K]: V };

HashMap<UntaggedVariantsKey, ()>: export type HashMap<K, V> = { [key in K]: V };

HashMap<Variants, ()>: export type HashMap<K, V> = { [key in K]: V };

MacroStruct: export type MacroStruct = string;

MacroStruct2: export type MacroStruct2 = {
	demo: string,
};

MacroEnum: export type MacroEnum = ({ Demo: string }) & { Demo2?: never } | ({ Demo2: { demo2: string } }) & { Demo?: never };

DeprecatedType: /**
 * @deprecated
 */
export type DeprecatedType = {
	a: number,
};

DeprecatedTypeWithMsg: /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = {
	a: number,
};

DeprecatedTypeWithMsg2: /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = {
	a: number,
};

DeprecatedFields: export type DeprecatedFields = {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
};

DeprecatedTupleVariant: export type DeprecatedTupleVariant = [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number];

DeprecatedEnumVariants: export type DeprecatedEnumVariants = 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C";

CommentedStruct: /**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedStruct = {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
};

CommentedEnum: /**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedEnum = 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ B: { 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
a: number } }) & { A?: never };

SingleLineComment: // Some single-line comment
export type SingleLineComment = 
// Some single-line comment
({ A: number }) & { B?: never } | 
// Some single-line comment
({ B: { 
// Some single-line comment
a: number } }) & { A?: never };

NonGeneric: export type Demo<A, B> = {
	a: A,
	b: B,
};

HalfGenericA<u8>: export type Demo<A, B> = {
	a: A,
	b: B,
};

HalfGenericB<bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

FullGeneric<u8, bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

Another<bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

MapA<u32>: export type HashMap<K, V> = { [key in K]: V };

MapB<u32>: export type HashMap<K, V> = { [key in K]: V };

MapC<u32>: export type HashMap<K, V> = { [key in K]: V };

AGenericStruct<u32>: export type AGenericStruct<T> = {
	field: Demo<T, boolean>,
};

A: export type A = {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
};

DoubleFlattened: export type DoubleFlattened = {
	a: ToBeFlattened,
	b: ToBeFlattened,
};

FlattenedInner: export type FlattenedInner = {
	c: Inner,
};

BoxFlattened: export type BoxFlattened = {
	b: BoxedInner,
};

BoxInline: export type BoxInline = {
	c: BoxedInner,
};

First: export type First = {
	a: string,
};

Second: export type Second = {
	a: number,
};

Third: export type Third = (First) & {
	b: { [key in string]: string },
	c: First,
};

Fourth: export type Fourth = {
	a: First,
	b: {
		a: string,
	},
};

TagOnStructWithInline: export type TagOnStructWithInline = {
	a: First,
	b: {
		a: string,
	},
};

Sixth: export type Sixth = {
	a: First,
	b: First,
};

Seventh: export type Seventh = {
	a: First,
	b: Second,
};

Eight: export type Eight = { A: string } | "B";

Tenth: export type Tenth = string | null | {
	a: string,
} | First;

MyEnumTagged: export type MyEnumTagged = { type: "Variant" } & (First);

MyEnumExternal: export type MyEnumExternal = { Variant: (First) };

MyEnumAdjacent: export type MyEnumAdjacent = { t: "Variant"; c: (First) };

MyEnumUntagged: export type MyEnumUntagged = (First);

EmptyStruct: export type EmptyStruct = Record<string, never>;

EmptyStructWithTag: export type EmptyStructWithTag = Record<string, never>;

AdjacentlyTagged: export type AdjacentlyTagged = { t: "A" } | { t: "B"; c: { id: string; method: string } } | { t: "C"; c: string };

LoadProjectEvent: export type LoadProjectEvent = { event: "Started"; data: { project_name: string } } | { event: "ProgressTest"; data: { project_name: string; status: string; progress: number } } | { event: "Finished"; data: { project_name: string } };

ExternallyTagged: export type ExternallyTagged = "A" | ({ B: { id: string; method: string } }) & { C?: never } | ({ C: string }) & { B?: never };

Issue221External: export type Issue221External = ({ A: { a: string } }) & { B?: never } | ({ B: { b: string } }) & { A?: never };

InternallyTaggedD: export type InternallyTaggedD = { type: "A" } & { [key in string]: string };

InternallyTaggedE: export type InternallyTaggedE = { type: "A" };

InternallyTaggedF: export type InternallyTaggedF = { type: "A" } & InternallyTaggedFInner;

InternallyTaggedH: export type InternallyTaggedH = { type: "A" } & InternallyTaggedHInner;

InternallyTaggedL: export type InternallyTaggedL = { type: "A" } | { type: "B" };

InternallyTaggedM: export type InternallyTaggedM = { type: "A" };

StructWithAlias: export type StructWithAlias = {
	field: string,
};

StructWithMultipleAliases: export type StructWithMultipleAliases = {
	field: string,
};

StructWithAliasAndRename: export type StructWithAliasAndRename = {
	field: string,
};

EnumWithVariantAlias: export type EnumWithVariantAlias = "Variant" | "Other";

EnumWithMultipleVariantAliases: export type EnumWithMultipleVariantAliases = "Variant" | "Other";

EnumWithVariantAliasAndRename: export type EnumWithVariantAliasAndRename = "Variant" | "Other";

InternallyTaggedWithAlias: export type InternallyTaggedWithAlias = { type: "A" } & { field: string } | { type: "B" } & { other: number };

AdjacentlyTaggedWithAlias: export type AdjacentlyTaggedWithAlias = { type: "A"; data: { field: string } } | { type: "B"; data: { other: number } };

UntaggedWithAlias: export type UntaggedWithAlias = ({ field: string }) & { other?: never } | ({ other: number }) & { field?: never };

Issue221UntaggedSafe: export type Issue221UntaggedSafe = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never };

Issue221UntaggedMixed: export type Issue221UntaggedMixed = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never } | ({ [key in string]: string });

EmptyEnum: export type EmptyEnum = never;

EmptyEnumTagged: export type EmptyEnumTagged = never;

EmptyEnumTaggedWContent: export type EmptyEnumTaggedWContent = never;

EmptyEnumUntagged: export type EmptyEnumUntagged = never;

SkipOnlyField: export type SkipOnlyField = Record<string, never>;

SkipField: export type SkipField = {
	b: number,
};

SkipVariant: export type SkipVariant = { A: string };

SkipUnnamedFieldInVariant: export type SkipUnnamedFieldInVariant = "A" | { B: [number] };

SkipNamedFieldInVariant: export type SkipNamedFieldInVariant = ({ A: Record<string, never> }) & { B?: never } | ({ B: { b: number } }) & { A?: never };

TransparentWithSkip: export type TransparentWithSkip = null;

TransparentWithSkip2: export type TransparentWithSkip2 = string;

TransparentWithSkip3: export type TransparentWithSkip3 = string;

SkipVariant2: export type SkipVariant2 = { tag: "A"; data: string };

SkipVariant3: export type SkipVariant3 = { A: { a: string } };

SkipStructFields: export type SkipStructFields = {
	a: number,
};

SpectaSkipNonTypeField: export type SpectaSkipNonTypeField = {
	a: number,
};

FlattenA: export type FlattenA = {
	a: number,
	b: number,
};

FlattenB: export type FlattenB = (FlattenA) & {
	c: number,
};

FlattenC: export type FlattenC = (FlattenA) & {
	c: number,
};

FlattenD: export type FlattenD = {
	a: FlattenA,
	c: number,
};

FlattenE: export type FlattenE = {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
};

FlattenF: export type FlattenF = {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
};

FlattenG: export type FlattenG = {
	b: FlattenB,
	d: number,
};

TupleNested: export type TupleNested = [number[], [number[], number[]], [number[], number[], number[]]];

Generic1<()>: export type Generic1<T> = {
	value: T,
	values: T[],
};

GenericAutoBound<()>: export type GenericAutoBound<T> = {
	value: T,
	values: T[],
};

GenericAutoBound2<()>: export type GenericAutoBound2<T> = {
	value: T,
	values: T[],
};

Container1: export type Container1 = {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
};

Generic2<(), String, i32>: export type Generic2<A, B, C> = ({ A: A }) & { B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ B: [B, B, B] }) & { A?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ C: C[] }) & { A?: never; B?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ D: A[][][] }) & { A?: never; B?: never; C?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ E: { a: A; b: B; c: C } }) & { A?: never; B?: never; C?: never; D?: never; X?: never; Y?: never; Z?: never } | ({ X: number[] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; Y?: never; Z?: never } | ({ Y: number }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Z?: never } | ({ Z: number[][] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never };

GenericNewType1<()>: export type GenericNewType1<T> = Vec<T>[][];

GenericTuple<()>: export type GenericTuple<T> = [T, T[], Vec<T>[][]];

GenericStruct2<()>: export type GenericStruct2<T> = {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: Vec<T>[][],
	h: ([([[([T, T]), ([T, T]), ([T, T])], [([T, T]), ([T, T]), ([T, T])]]), ([[([T, T]), ([T, T]), ([T, T])], [([T, T]), ([T, T]), ([T, T])]]), ([[([T, T]), ([T, T]), ([T, T])], [([T, T]), ([T, T]), ([T, T])]])])[],
};

InlineGenericNewtype<String>: export type InlineGenericNewtype<T> = T;

InlineGenericNested<String>: export type InlineGenericNested<T> = [T, T[], [T, T], { [key in string]: T }, T | null, "Unit" | ({ Unnamed: T }) & { Named?: never } | ({ Named: { value: T } }) & { Unnamed?: never }];

InlineFlattenGenericsG<()>: export type InlineFlattenGenericsG<T> = {
	t: T,
};

InlineFlattenGenerics: export type InlineFlattenGenerics = (InlineFlattenGenericsG<string>) & {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
};

GenericParameterOrderPreserved: export type GenericParameterOrderPreserved = {
	pair: Pair<number, string>,
};
